# microschc

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  micro-schc-implementation.md  microschc-implementation.md  microschc.py  ngcap_short.pdml  pyproject.toml  requirements.txt  rfc8724extras.py  testPdml.py
.github/workflows/: python-package.yml  python-publish.yml
examples/: buffer_tutorial.ipynb  quickstart.ipynb
examples/quickstart-files/: dataset-description.md  leshan-thermostat-readings.pcapng  syntactic.json
microschc/: __init__.py  compat.py  rfc8724.py  rfc8724extras.py
microschc/actions/: compression.py
microschc/binary/: __init__.py  buffer.py
microschc/compressor/: __init__.py  compressor.py
microschc/crypto/: __init__.py  crc.py
microschc/decompressor/: __init__.py  decompressor.py
microschc/extras/: __init__.py
microschc/extras/io/: __init__.py
microschc/extras/io/pcapng/: __init__.py  pcapng.py
microschc/manager/: __init__.py  manager.py
microschc/matching/: operators.py
microschc/parser/: __init__.py  factory.py  parser.py  pdmlParser.py
microschc/parser/protocol/: coap.py  ipv4.py  ipv6.py  registry.py  udp.py
microschc/protocol/: __init__.py  coap.py  compute.py  gtp.py  gtp_v1.py  gtp_v2.py  ipv4.py  ipv6.py  registry.py  sctp.py  tcp.py  udp.py
microschc/ruler/: __init__.py  ruler.py
microschc/tools/: __init__.py  cda.py  matchingoperator.py  mo.py  targetvalue.py
tests/: test_json.py  test_microschc.py
tests/actions/: test_compression.py
tests/binary/: test_buffer.py
tests/compressor/: test_compressor.py
tests/decompressor/: test_decompressor.py
tests/extras/io/: test_pcapng.py
tests/manager/: test_manager.py
tests/matching/: test_matching_operators.py  test_operators.py
tests/parser/: test_parser.py  test_pdmlParser.py
tests/parser/protocol/: test_parser_coap.py  test_parser_ipv4.py  test_parser_ipv6.py  test_parser_udp.py
tests/protocol/: test_coap.py  test_ipv4.py  test_ipv6.py  test_predict_next_protocol.py  test_registry.py  test_sctp.py  test_udp.py
tests/ruler/: test_ruler.py
tests/tools/: test_matchingoperator.py  test_targetvalue.py
