[project]
name = "microschc"
description = "A Python implementation of the Static Context Header Compression (SCHC) protocol"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["schc", "compression", "iot", "lpwan"]
authors = [
    { name = "Quentin Lampin", email = "quentin.lampin@orange.com" }
]
maintainers = [
    { name = "Quentin Lampin", email = "quentin.lampin@orange.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
]
dependencies = [
    "typing-extensions>=4.0.0",
    "backports.strenum; python_version < '3.11'",
]
dynamic = ["version"]

[project.optional-dependencies]
extras = [
  "python-pcapng"
]

[project.urls]
"Homepage" = "https://github.com/quentinlampin/microschc/"
"Bug Tracker" = "https://github.com/quentinlampin/microschc/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "microschc/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/.pytest_cache",
  "/.vscode",
  "/tests/",
  "/.gitignore",
  "/CODE_OF_CONDUCT.md",
  "/microschc-implementation.md"
]

[tool.hatch.build.targets.wheel]
packages = ["microschc"]

[tool.hatch.envs.test]

dependencies = [
  "pytest"
]

